forget about bootstrap css

--- a/pickup.html
+++ b/pickup.html
@@ -7,6 +7,8 @@ permalink: /pickup/
 <p>UAB CSSA为广大新生提供接机服务，请填写下表联系我们。</p>
 
 
+<link rel="stylesheet" href="/css/bootstrap.min_modify.css">
+
 <div style="width: 90%;">
         <form role="form"  id="formaction" method="POST">
           <input type="hidden" name="_subject" value="请求接机！" />
