add thanks info page

--- a/pickup.html
+++ b/pickup.html
@@ -692,7 +692,7 @@ select[multiple].input-lg {
 <div style="width: 90%;">
         <form role="form"  id="formaction" method="POST">
           <input type="hidden" name="_subject" value="请求接机！" />
-          <input type="hidden" name="_next" value="//uabcssa.github.io/pickup/" />
+          <input type="hidden" name="_next" value="//uabcssa.github.io/thanks.html" />
           <!--input type="hidden" name="_format" value="plain" />
           <input type="hidden" name="_language" value="zh-CN" /-->
 
